2005-08-22  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* setup.py: Fixed location of "doc" directory.

2005-08-22  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* fi.po: Fixed finnish translation.

2005-08-22  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* INSTALL: File initially written.

2005-08-22  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* setup.py: Changed package name to lowercase.

2005-08-22  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* MANIFEST.in: New file.
	
	* setup.cfg: New file.
	
	* setup.py: File initially written.
	
	* gaupol (prepare_installed_run):
	  Changed LIB_DIR to point to Python's site-packages.
	  
	* gaupol.desktop: Fixed Category to AudioVideo.
	
	* trantool: Use glob to find files.
	
	* uninstall.py: Removed in favor of uninstallation in setup.py.

2005-08-21  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol: Re-added "-t" / "--no-translation" option.

	* README.translators:
	  Fixed instructions on testing translation.

	* TODO: Updated.
	
	* gui/dialogs/filechooser.py:
	  gui/delegates/guibuilder.py:
	  gui/delegates/filesaver.py:
	  gui/delegates/celleditor.py:
	  lib/util/encodinglib.py:
	  Fixed translatable strings.
	  
	* gui/dialogs/question.py (RevertQuestionDialog):
	  Use stock button for revert.

	* gui/delegates/texteditor.py:
	  gui/delegates/roweditor.py:
	  Removed faulty and complicated ngettext strings.

	* fi.po: Added finnish translation.

2005-08-21  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol.desktop: Altered finnish translation.
	
	* trantool (check_write_permissions):
	  Fixed diretory recursion bug.
	  
	* gui/dialogs/error.py:
	  gui/dialogs/warning.py:
	  gui/dialogs/question.py:
	  gui/delegates/helper.py:
	  gui/delegates/celleditor.py:
	  Fixed formatting of translatable strings.
	  
	* gui/delegates/guibuilder.py: Removed search menu.
	
	* README.translators: Minor formatting and typo fixes.
	
	* prefs-dialog.glade (undo_levels_spin_button): Do not expand.

2005-08-21  Osmo Salomaa  <otsaloma@cc.hut.fi>
