@@ -1,9 +1,9 @@
 Before 0.1
 ==========
 
-  - Project page
-  - gaupol-translators (or gaupol-i18n) mailing list
   - Website
+  - Revise README based on website.
+  - Download page link for version check dialog button
   - Release process: branching, tarballing and informing
 
 
